--- a/pom.xml
+++ b/pom.xml
@@ -12,12 +12,33 @@
 	<groupId>br.edu.infnet</groupId>
 	<artifactId>appguardavolume</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>appguardavolume</name>
+	<name>apppedido</name>
 	<description>Projeto para gestão de Guarda Volumes</description>
 	<properties>
 		<java.version>11</java.version>
 	</properties>
 	<dependencies>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-entitymanager</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-core</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+		</dependency>
+
 		<dependency>
 			<groupId>taglibs</groupId>
 			<artifactId>standard</artifactId>
